--- a/FplApp.DataImporter/FplApp.DataImporter.csproj
+++ b/FplApp.DataImporter/FplApp.DataImporter.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FplClient" Version="5.2.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
   </ItemGroup>
 
