--- a/FplApp/FplApp.csproj
+++ b/FplApp/FplApp.csproj
@@ -5,7 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FplApp.DataImporter\FplApp.DataImporter.csproj" />
+    <ProjectReference Include="..\FplApp.EfCoreDbCommunication\FplApp.EfCoreDbCommunication.csproj" />
   </ItemGroup>
 
 </Project>
