--- a/FplApp/appsettings.json
+++ b/FplApp/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "FplAppDbContext": "Host=localhost;Database=fplapp;Username=postgres;Password=postgres"
+  }
 }
