--- a/FplApp.DataImporter/FplApp.DataImporter.csproj
+++ b/FplApp.DataImporter/FplApp.DataImporter.csproj
@@ -9,10 +9,12 @@
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="FplClient" Version="5.2.0" />
+    <PackageReference Include="log4net" Version="2.0.12" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FplApp.EfCoreDbCommunication\FplApp.EfCoreDbCommunication.csproj" />
     <ProjectReference Include="..\FplApp.Models\FplApp.Models.csproj" />
   </ItemGroup>
 </Project>
