--- a/FplApp.DataImporter/appsettings.json
+++ b/FplApp.DataImporter/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "fplappapi": "https://localhost:44373/api/element/import"
 }
