--- a/FplApp.DataImporter/appsettings.json
+++ b/FplApp.DataImporter/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "fplappapi": "https://localhost:44373/api/element/import"
+  "fplappapi": "https://localhost:44373/api/element/import",
+  "import": "https://localhost:44373/api/import"
 }
